--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <script type="module" crossorigin src="./assets/main.ae54f498.js"></script>
-    <link rel="stylesheet" href="./assets/index.4a19a40a.css">
+    <link rel="stylesheet" href="./assets/index.be799c12.css">
   </head>
   <body class="grid place-items-center bg-gray-300 p-8">
     <section>
@@ -35,6 +35,7 @@
     </section>
 
     <section>
+      <img class="pt-32 pl-80 pr-80" src="img/font-square.png" alt="" />
       <img src="img/square-timelapse.gif" alt="" />
     </section>
 
@@ -50,6 +51,10 @@
             Derudover har jeg ønsket at skabe en font, som også inddrager
             inspiration fra pixeleret skriftyper, der gør at mine bogstaver får
             afskåret hjørner.
+          </p>
+          <p class="mt-4">
+            Fordi bogstaverne er lavet ud fra et grid, får bogstaverne det her
+            robuste og kantede look
           </p>
         </div>
       </div>
